--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="content">
       <div class="title"><span>Contact Me</span></div>
       <div class="text">
-        959-4742-396
+        ritup665@gmail.com
       </div>
     </div>
   </section>
