--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="text">
         <div class="text-one">Hello,</div>
         <div class="text-two">I'm Ritu Pandey</div>
-        <div class="text-three">Java Developer</div>
+        <div class="text-three">Web Developer</div>
         <div class="text-four">From Navi Mumbai</div>
       </div>
       </div>
